--- a/dem_download_delineation.Rmd
+++ b/dem_download_delineation.Rmd
@@ -31,7 +31,7 @@ library(tidyverse)
 library(dataRetrieval)
 library(whitebox)
 whitebox::wbt_init()
-library(mapview)
+library(leaflet)
 library(sf)
 library(viridis)
 library(terrainr)
@@ -39,6 +39,7 @@ library(tmap)
 library(elevatr)
 library(ggnewscale)
 library(tidyterra)
+library(stars)
 
 ```
 
@@ -63,9 +64,10 @@ Now we can use the shapefile we just got from StreamStats to download a DEM. We 
 
 boundary <- st_read("stream_stat/layers/globalwatershed.shp") 
 
-# Look at the boundary using library(mapview)
+# Look at the boundary using library(tmap)
 
-mapview(boundary)
+tm_shape(boundary) +
+  tm_polygons()
 
 
 ```
@@ -98,7 +100,8 @@ output_tiles <- rast(output_tiles[["elevation"]])
 
 writeRaster(output_tiles, "dem/output_tiles.tif", overwrite = TRUE)
 
-mapview(output_tiles)
+tm_shape(output_tiles) +
+  tm_raster(style = "cont", palette = "-viridis", legend.show = TRUE)
 
 ```
 
@@ -181,7 +184,8 @@ wbt_watershed(d8_pntr = "dem/D8pointer.tif",
 ws <- rast("dem/bzn_crk_watershed.tif")
 
 # View the watershed raster. 
-mapview(ws)
+tm_shape(ws) +
+  tm_raster(style = "cont", palette = "-viridis", legend.show = TRUE)
 
 ```
 
